Update news fetcher code, fix tab spacing (#2)

--- a/src/style/news.module.css
+++ b/src/style/news.module.css
@@ -62,11 +62,11 @@
     font-size: 1.1em;
 }
 
-.auth {
+.authors {
     color: #6c5ea6;
 }
 
-.title, .auth {
+.title, .authors {
     font-weight: bold;
 }
 
